force-app/main/default/objects/Application__c/fields/Favorite_Color__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Color__c</fullName>
    <label>Favorite Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Puce</fullName>
            </value>
            <value>
                <fullName>Maroon</fullName>
            </value>
            <value>
                <fullName>Violet</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Fuscia</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Mauv</fullName>
            </value>
            <value>
                <fullName>Aquamarine</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Khaki</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Crimson</fullName>
            </value>
            <value>
                <fullName>Teal</fullName>
            </value>
            <value>
                <fullName>Goldenrod</fullName>
            </value>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>Turquoise</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>