force-app/main/default/objects/Application__c/fields/Program_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Program_Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Webinar</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.Type</field>
            <operation>equals</operation>
            <value>Program Webinar</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>