force-app/main/default/objects/Application__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>TimeZone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asia/Hebron</fullName>
            </value>
            <value>
                <fullName>Asia/Tehran</fullName>
            </value>
            <value>
                <fullName>America/Sao_Paulo</fullName>
            </value>
            <value>
                <fullName>Indian/Mauritius</fullName>
            </value>
            <value>
                <fullName>Africa/Lusaka</fullName>
            </value>
            <value>
                <fullName>Asia/Jakarta</fullName>
            </value>
            <value>
                <fullName>Asia/Manila</fullName>
            </value>
            <value>
                <fullName>America/Montevideo</fullName>
            </value>
            <value>
                <fullName>Europe/Lisbon</fullName>
            </value>
            <value>
                <fullName>Europe/Moscow</fullName>
            </value>
            <value>
                <fullName>Asia/Harbin</fullName>
            </value>
            <value>
                <fullName>America/Costa_Rica</fullName>
            </value>
            <value>
                <fullName>Asia/Chongqing</fullName>
            </value>
            <value>
                <fullName>Asia/Kuala_Lumpur</fullName>
            </value>
            <value>
                <fullName>America/Recife</fullName>
            </value>
            <value>
                <fullName>Asia/Qyzylorda</fullName>
            </value>
            <value>
                <fullName>Europe/Stockholm</fullName>
            </value>
            <value>
                <fullName>Africa/Accra</fullName>
            </value>
            <value>
                <fullName>Africa/Maseru</fullName>
            </value>
            <value>
                <fullName>Asia/Seoul</fullName>
            </value>
            <value>
                <fullName>Asia/Kuwait</fullName>
            </value>
            <value>
                <fullName>Asia/Shanghai</fullName>
            </value>
            <value>
                <fullName>Africa/Lubumbashi</fullName>
            </value>
            <value>
                <fullName>Asia/Tokyo</fullName>
            </value>
            <value>
                <fullName>Europe/Zagreb</fullName>
            </value>
            <value>
                <fullName>America/Argentina/Cordoba</fullName>
            </value>
            <value>
                <fullName>Europe/Uzhgorod</fullName>
            </value>
            <value>
                <fullName>Europe/Helsinki</fullName>
            </value>
            <value>
                <fullName>Europe/Dublin</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>