force-app/main/default/objects/Application__c/fields/UId__c.field-meta.xml
<CustomField>
    <fullName>UId__c</fullName>
    <externalId>true</externalId>
    <label>UId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>