force-app/main/default/objects/Application__c/fields/zipcode__c.field-meta.xml
<CustomField>
    <fullName>zipcode__c</fullName>
    <label>zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>